package ComportementBenOuais;

public class ComportementArc implements ComportementArme {
    @Override
    public void utiliserArme() {

    }
}
