package ComportementBenOuais;

public interface ComportementArme {
    void utiliserArme();
}
