package ComportementBenOuais;

public class ComportementEpee implements ComportementArme {
    @Override
    public void utiliserArme() {

    }
}
