package ComportementBenOuais;

public class ComportementPoignard implements ComportementArme {
    @Override
    public void utiliserArme() {

    }
}
