package Personnages.Type;

import Personnages.Personnage;

public class Chevalier extends Personnage {
}
