package Personnages.Type;

import Personnages.Personnage;

public class Reine extends Personnage {
}
