package Personnages.Type;

import Personnages.Personnage;

public class Roi extends Personnage {
}
