package Personnages.Type;

import Personnages.Personnage;

public class Troll extends Personnage {
}
