@startuml

'-----------------------------------
' UML concepts illustrated
' JMB 2014
'-----------------------------------

'hide circle
hide empty members
hide empty methods


abstract class Personnages.Personnage {
combattre() {this.arme.utiliserArme();}
setArme(ComportementBenOuais.ComportementArme a) {this.arme = a;}
}
class Reine {
combattre() {...}
}
class Roi {
combattre() {...}
}
class ComportementBenOuais.ComportementPoignard {
}
class ComportementBenOuais.ComportementArc {
}
class ComportementBenOuais.ComportementEpee {
}
interface ComportementBenOuais.ComportementArme{
{abstract} utiliserArme()
}
class Troll {
combattre() {...}
}
class Chevalier {
combattre() {...}
}
Personnages.Personnage <|-- Roi
Personnages.Personnage <|-- Reine
Personnages.Personnage <|-- Chevalier
Personnages.Personnage <|-- Troll
Personnages.Personnage o--> "1" ComportementBenOuais.ComportementArme

ComportementBenOuais.ComportementArme <|.. ComportementBenOuais.ComportementEpee
ComportementBenOuais.ComportementArme <|.. ComportementBenOuais.ComportementPoignard
ComportementBenOuais.ComportementArme <|.. ComportementBenOuais.ComportementArc


@enduml
